Bug 1187315 - Refactor out Constraints.webidl. r=bz